<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_config"
        android:id="@+id/btn_basecset_all_config"
        android:layout_alignParentRight="true"/>
    <TextView
        android:layout_below="@+id/btn_basecset_all_config"
        android:id="@+id/tv_min_face"
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/min_face"/>
    <TextView
        android:layout_toEndOf="@+id/tv_min_face"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tv_min_face_value"/>

    <TextView
        android:id="@+id/tv_silent_live_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:text="@string/silent_live_type"
        android:layout_below="@+id/tv_min_face"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20dp"
        android:id="@+id/tv_silent_live_type_value"
        android:layout_toEndOf="@+id/tv_silent_live_type"
        android:layout_alignTop="@+id/tv_silent_live_type"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_feature_threshold"
        android:text="@string/feature_threshold_value"
        android:layout_below="@+id/tv_silent_live_type"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_feature_threshold_value"
        android:layout_toEndOf="@+id/tv_feature_threshold"
        android:layout_alignTop="@+id/tv_feature_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rgb_live_threshold"
        android:text="@string/rgb_live_threshold"
        android:layout_below="@+id/tv_feature_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rgb_live_threshold_value"
        android:layout_toEndOf="@+id/tv_rgb_live_threshold"
        android:layout_alignTop="@id/tv_rgb_live_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nir_live_threshold"
        android:text="@string/nir_live_threshold"
        android:layout_below="@+id/tv_rgb_live_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_nir_live_threshold_value"
        android:layout_toEndOf="@+id/tv_nir_live_threshold"
        android:layout_alignTop="@id/tv_nir_live_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_depth_live_threshold"
        android:text="@string/depth_lice_threshold"
        android:layout_below="@+id/tv_nir_live_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_depth_live_threshold_value"
        android:layout_toEndOf="@+id/tv_depth_live_threshold"
        android:layout_alignTop="@+id/tv_depth_live_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_detect_type"
        android:text="@string/detect_type"
        android:layout_below="@+id/tv_depth_live_threshold"/>

    <TextView
        android:textSize="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_detect_type_value"
        android:layout_toEndOf="@+id/tv_detect_type"
        android:layout_alignTop="@+id/tv_detect_type"/>

    <Button
        android:id="@+id/btn_set_confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/confirm"
        android:layout_alignParentBottom="true"
        />
    <Button
        android:id="@+id/btn_face_depository"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/facedepository"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"/>
</RelativeLayout>
