<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_regist_by_photo"
        android:text="@string/photo"
        android:textSize="30dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_regist_by_photo"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_regist_by_gallery"
        android:text="@string/gallery"
        android:textSize="30dp"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_regist_by_gallery"
        android:layout_marginTop="40dp"
        android:layout_centerHorizontal="true"
        android:id="@+id/btn_regist_by_depository"
        android:text="@string/by_depository"
        android:textSize="30dp"
        />
</RelativeLayout>
