<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@drawable/registdialogbg"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/btn_regist_by_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/photo"
        android:textSize="@dimen/x60" />

    <Button
        android:id="@+id/btn_regist_by_gallery"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_regist_by_photo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x50"
        android:text="@string/gallery"
        android:textSize="@dimen/x60" />

    <Button
        android:id="@+id/btn_regist_by_depository"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btn_regist_by_gallery"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/x50"
        android:text="@string/by_depository"
        android:textSize="@dimen/x60" />
</RelativeLayout>
