<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/rl_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btn_face_depository_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"/>

        <TextView
            android:id="@+id/btn_face_depository_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:visibility="invisible"
            android:layout_toRightOf="@+id/btn_face_depository_back"
            android:layout_marginLeft="10dp"
            android:textSize="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="18dp"
            android:layout_centerHorizontal="true"
            android:text="@string/facedepository" />

        <TextView
            android:id="@+id/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="+"
            android:textSize="50dp"/>

        <TextView
            android:id="@+id/btn_face_depository_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:visibility="invisible"
            android:layout_toStartOf="@+id/btn_add"/>
    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/user_info_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/rl_title">

    </androidx.recyclerview.widget.RecyclerView>

</RelativeLayout>
