<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/input_pswd"
        android:gravity="center"
        />

    <RelativeLayout
        android:id="@+id/rl_name"
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:layout_below="@+id/tv_title">

        <EditText
            android:id="@+id/et_login_pswd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="点确定就可以了" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_confirm"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rl_name"
        android:text="@string/confirm"/>

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        android:layout_alignParentRight="true"
        android:layout_below="@id/rl_name"/>

</RelativeLayout>
