<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/iv_user_info_image"
        android:layout_width="500dp"
        android:layout_height="600dp"
        android:layout_centerInParent="true"
        android:src="@mipmap/icon_face_"/>

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/iv_user_info_image">
        <TextView
            android:id="@+id/tv_user_info_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/tv_user_info_name_value"
            android:layout_width="wrap_content"
            android:layout_toRightOf="@+id/tv_user_info_name"
            android:layout_height="wrap_content" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_user_info_ctime"
            android:text="@string/create_name"
            android:layout_below="@+id/tv_user_info_name"/>
        <TextView
            android:id="@+id/tv_user_info_ctime_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/tv_user_info_ctime"
            android:layout_alignTop="@+id/tv_user_info_ctime"/>
    </RelativeLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_user_info_back"
        android:text="@string/back"/>
</RelativeLayout>
