<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.dataexpo.facedataexpo.camera.AutoTexturePreviewView
        android:id="@+id/auto_camera_preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        />

    <TextView
        android:id="@+id/tv_photo_regist_track"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:background="#016838"
        android:gravity="center"
        android:textColor="#ffffff"
        android:visibility="gone" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/photo"
            android:textSize="@dimen/x45"
            android:id="@+id/btn_cat_photo"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:id="@+id/rl_photo_censor"
            android:visibility="invisible">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/btn_regist_cancel"
                android:text="@string/cancel"
                />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:id="@+id/btn_regist_ok"
                android:text="@string/confirm"/>
        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
